Bug 427466 - Attempting to load reference image from clipboard throws error.
Summary: Attempting to load reference image from clipboard throws error.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-08 23:22 UTC by Ralek Kolemios
Modified: 2020-10-13 06:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralek Kolemios 2020-10-08 23:22:13 UTC
When using the clipboard button in the reference image tool options menu, it will always throw the error "Could not load reference image from clipboard", regardless if the clipboard is empty, if it contains non-image data, or any image format of any size.

Krita 4.4.1-alpha (git c0166ba)
Qt 5.12.9
Comment 1 sh_zam 2020-10-09 04:47:57 UTC
Git commit 7f7b5c17a1ff1887113d86a43ea14b11174ff7f8 by Sharaf Zaman.
Committed on 09/10/2020 at 04:42.
Pushed by szaman into branch 'krita/4.3'.

Regression fix: reference image from clipboard throws error

M  +8    -6    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/graphics/krita/commit/7f7b5c17a1ff1887113d86a43ea14b11174ff7f8
Comment 2 Dmitry Kazakov 2020-10-12 09:54:17 UTC
Git commit 36a869c346c56e2f062d354e78281d1080dac505 by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 12/10/2020 at 09:47.
Pushed by dkazakov into branch 'krita/4.4.0'.

Regression fix: reference image from clipboard throws error

M  +8    -6    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/graphics/krita/commit/36a869c346c56e2f062d354e78281d1080dac505
Comment 3 sh_zam 2020-10-13 06:26:50 UTC
Git commit 04d3a19a7f0249cef27e1f86838a17e11b744bd7 by Sharaf Zaman.
Committed on 13/10/2020 at 06:26.
Pushed by szaman into branch 'master'.

Regression fix: reference image from clipboard throws error


(cherry picked from commit 7f7b5c17a1ff1887113d86a43ea14b11174ff7f8)

M  +8    -6    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/graphics/krita/commit/04d3a19a7f0249cef27e1f86838a17e11b744bd7