Regression fix: reference image from clipboard throws error

BUG:427466


(cherry picked from commit 7f7b5c17a1ff1887113d86a43ea14b11174ff7f8)